--- a/src/app/git-navbar/git-navbar.component.html
+++ b/src/app/git-navbar/git-navbar.component.html
@@ -1,13 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
- 
-    <button class="navbar-toggler" type="button">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" style="padding: 50px">Search Profile</a>
-        <a class="nav-item nav-link" routerLink="repos" routerLinkActive='active'>Search Repos</a>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="/"><b>SEARCH MASTER</b></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" routerLink="profiles" routerLinkActive='active'>Search Profile<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="repos" routerLinkActive='active'>Search Repos</a>
     </div>
-  </nav>
-  
+  </div>
+</nav>
