Changes made to gitrepository button color changed to defalt.

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -1,16 +1,15 @@
 <!-- body section starts here -->
 <!-- <body> -->
 <div class="bg">
-  <div class="jumbotron bg-info">
+  <div >
     <h1 style="text-align: center">Welcome to Repositories</h1>
-    <hr class="my-4">
+    <hr>
     <p class="lead text-center">An application that let's you find your Git Profiles</p>
   </div>
  
 
  
   <div class="container">
-    <h4 class="text-center h4 text-white text-white">Check Out Github User Repositories Here!</h4>
     <app-git-form (emitSearch)="searchRepo($event)"></app-git-form>
     <hr>
   </div>
@@ -21,13 +20,13 @@
   <div class="container card-columns">
     <div class="card" *ngFor="let gitrepo of gitrepos">
       <div class="card">
-        <div class="card-header text-center blue-gradient text-white"><h2>{{gitrepo.name}}</h2></div>
+        <div class="card-header"><h2>{{gitrepo.name}}</h2></div>
         <div class="card-body">
           <p class="card-text"><strong>Description: </strong>{{gitrepo.description}}</p>
           <p class="card-text"><strong>Create at: </strong>{{gitrepo.created_at|date}}</p>
           <p class="card-text"> <strong>Language: </strong> {{gitrepo.language}}.</p>
           <!-- Button -->
-          <a href="{{gitrepo.html_url}}" target="_blank" class="btn btn-info">Check it on Github</a><br>
+          <a href="{{gitrepo.html_url}}" target="_blank" class="btn btn-default">Check it on Github</a><br>
         </div><br>
         <div class="card">
           <small class="text-muted"><strong>Branch: </strong>{{gitrepo.default_branch}} </small>
