Add a paragraph in the repository file.

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -4,7 +4,7 @@
   <div >
     <h1 style="text-align: center">Welcome to Repositories</h1>
     <hr>
-    <p class="lead text-center">An application that let's you find your Git Profiles</p>
+    <p class="lead text-center">Type in your username:</p>
   </div>
  
 
