Add styles to the git navbar.

--- a/src/app/git-navbar/git-navbar.component.html
+++ b/src/app/git-navbar/git-navbar.component.html
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="profiles" routerLinkActive='active'>Search Profile<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" routerLink="profiles" routerLinkActive='active' style="padding: 10px">Search Profile<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" routerLink="repos" routerLinkActive='active'>Search Repos</a>
     </div>
   </div>
