--- a/src/app/git-navbar/git-navbar.component.html
+++ b/src/app/git-navbar/git-navbar.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="profiles" routerLinkActive='active' style="padding: 10px">Search Profile<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" routerLink="repos" routerLinkActive='active'>Search Repos</a>
+      <a class="nav-item nav-link" routerLink="repos" routerLinkActive='active'>Search Repository</a>
     </div>
   </div>
 </nav>
